--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^1.4.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "fs-extra": "^5.0.0"
   }
